--- a/baiji-rpc-spi/pom.xml
+++ b/baiji-rpc-spi/pom.xml
@@ -16,4 +16,12 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.baiji</groupId>
+            <artifactId>baiji-rpc-common</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
