--- a/baiji-rpc-gen/pom.xml
+++ b/baiji-rpc-gen/pom.xml
@@ -26,6 +26,11 @@
         </dependency>
         <dependency>
             <groupId>com.baiji</groupId>
+            <artifactId>baiji-rpc-spi</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baiji</groupId>
             <artifactId>baiji-rpc-common</artifactId>
             <version>1.0</version>
         </dependency>
