--- a/baiji-rpc-common/pom.xml
+++ b/baiji-rpc-common/pom.xml
@@ -16,4 +16,14 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson</groupId>
+            <artifactId>jackson-base</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+
+
+    </dependencies>
+
 </project>
