--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
                 <artifactId>netty-bom</artifactId>
                 <version>4.1.108.Final</version>
             </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson</groupId>
-                <artifactId>jackson-bom</artifactId>
-                <version>2.17.2</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.fasterxml.jackson</groupId>-->
+<!--                <artifactId>jackson-bom</artifactId>-->
+<!--                <version>2.17.2</version>-->
+<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 </project>
