--- a/baiji-rpc-gen-java/pom.xml
+++ b/baiji-rpc-gen-java/pom.xml
@@ -20,7 +20,12 @@
         <dependency>
             <groupId>com.baiji</groupId>
             <artifactId>baiji-rpc-spi</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baiji</groupId>
+            <artifactId>baiji-rpc-client</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
