--- a/baiji-rpc-gen/pom.xml
+++ b/baiji-rpc-gen/pom.xml
@@ -27,12 +27,12 @@
         <dependency>
             <groupId>com.baiji</groupId>
             <artifactId>baiji-rpc-spi</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>com.baiji</groupId>
             <artifactId>baiji-rpc-common</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
     <build>
