--- a/baiji-rpc-gen-java/pom.xml
+++ b/baiji-rpc-gen-java/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>baiji-rpc-client</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <!--            <version>2.3.32</version>-->
+        </dependency>
     </dependencies>
 
 </project>
