--- a/baiji-rpc-gen-java/pom.xml
+++ b/baiji-rpc-gen-java/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>freemarker</artifactId>
             <!--            <version>2.3.32</version>-->
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
