--- a/baiji-rpc-gen/pom.xml
+++ b/baiji-rpc-gen/pom.xml
@@ -34,6 +34,16 @@
             <artifactId>baiji-rpc-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.baiji</groupId>
+            <artifactId>baiji-rpc-gen-java</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
