--- a/baiji-rpc-common/pom.xml
+++ b/baiji-rpc-common/pom.xml
@@ -30,4 +30,15 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>maven-releases</id> <!-- 私服的 ID -->
+            <url>http://127.0.0.1:8081/repository/maven-releases/</url> <!-- 私服的发布仓库地址 -->
+        </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id> <!-- 快照仓库的 ID -->
+            <url>http://127.0.0.1:8081/repository/maven-snapshots/</url> <!-- 私服的快照仓库地址 -->
+        </snapshotRepository>
+    </distributionManagement>
 </project>
