--- a/baiji-rpc-client/pom.xml
+++ b/baiji-rpc-client/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>baiji-rpc-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.9</version>
+        </dependency>
     </dependencies>
 
 </project>
