--- a/baiji-rpc-annotation/pom.xml
+++ b/baiji-rpc-annotation/pom.xml
@@ -7,29 +7,13 @@
         <groupId>com.baiji</groupId>
         <version>1.0</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
-    <packaging>jar</packaging>
-
-    <artifactId>baiji-rpc-client</artifactId>
+    <artifactId>baiji-rpc-annotation</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.baiji</groupId>
-            <artifactId>baiji-rpc-common</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.14.9</version>
-        </dependency>
-    </dependencies>
 
 </project>
