--- a/baiji-rpc-config/pom.xml
+++ b/baiji-rpc-config/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>baiji-rpc-annotation</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.baiji</groupId>
+            <artifactId>baiji-rpc-common</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
