--- a/baiji-rpc-gen/pom.xml
+++ b/baiji-rpc-gen/pom.xml
@@ -44,6 +44,14 @@
             <artifactId>baiji-rpc-gen-java</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
