--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <modules>
         <module>baiji-rpc-common</module>
         <module>baiji-rpc-server</module>
-<!--        <module>baiji-rpc-client</module>-->
+        <!--        <module>baiji-rpc-client</module>-->
         <module>baiji-rpc-gen</module>
         <module>baiji-rpc-gen-java</module>
         <module>baiji-rpc-spi</module>
@@ -45,10 +45,13 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <version>2.4.2</version>
-                <type>pom</type>
-                <scope>import</scope>
+                <artifactId>spring-boot-starter</artifactId>
+                <version>2.1.5.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>2.1.5.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
